<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">BabySAM</string>
    <string name="splash">BabySAM for Student Attendance monitoring </string>
    <string name="login">Authentication</string>
    <string name="menu">MAIN MENU</string>
    <string name="event">EVENT ENTRY</string>
    <string name="old">SESSION HISTORY</string>
    <string name="help">HELP</string>
    <string name="face">Facial Recognition Screen</string>
    <string name="session">Sessions Details</string>
    <string name="officials">Officials Screen</string>
    <string name="settings">SETTINGS</string>
    <string name="old_display">HISTORY DETAILS</string>    
    <string name="facerec_display">Display Screen</string>
    
    <string name="version">version 2.0</string>
    <string name="auth_but">Login</string>
    <string name="zxing_but">Scan Code</string>
    
    <string name="menu_item_event">Event</string>
    <string name="menu_item_old">History</string>
    <string name="menu_item_facerec">Face Recognition</string>
    <string name="menu_item_set">Settings</string>
    <string name="menu_item_slist">Students List</string>
    <string name="menu_item_olist">Officials List</string>
    <string name="menu_item_help">Help</string>
    <string name="menu_item_logout">Logout</string>
    
    <string name="option_help">Help</string>
    <string name="option_event_addse">Add Session</string>
    <string name="option_event_addof">Add Official</string>
    <string name="option_event_addst">Add Student</string>
    <string name="option_event_save">Save</string>
    <string name="option_event_cancel">Cancel</string>
    <string name="option_event_set">Settings</string>
    <string name="option_event_upload">Upload</string>
    <string name="option_event_aries">Aries Upload</string>
    <string name="option_event_email">Send to Email</string>
    <string name="option_event_file">Save to File</string>
    <string name="option_event_std">Student List</string>
    <string name="option_event_off">Officials List</string>
    <string name="option_event_list">Attendance List</string>
    <string name="option_event_list_net">Internet</string>
    <string name="option_event_list_file">File</string>
    
    <string name="pick_file_title">Select a file</string>
    <string name="pick_file_button">Use this file</string>
    <string name="no_filemanager_installed">No compatible file manager found</string>
    
    <string name="event_offlabel">Officials </string>
    <string name="event_stdlabel">Students </string>
    <string name="ses_save">Save </string>
    <string name="ses_clear">Clear All </string>
    
    <string name="ses_event">Event Type </string>
    <string name="ses_venue">Venue</string>
    <string name="ses_course">Course </string>
    <string name="ses_time">Duration </string>
    
    <string name="set_st">Scan Students Barcode</string>
    <string name="set_of">Scan Officials Barcode </string>
    <string name="set_ev">Scan Event QR Code </string>
    <string name="set_url">Scan Attendance List URL </string>
    <string name="set_db">Use SQLite as DB(Debug option)</string>
    <string name="set_aries">Mother SAM address</string>
    
    <string name="set_option_all">Check All</string>
    <string name="set_option_cancel">Uncheck All</string>
    <string name="set_option_debug">Debug</string>
    <string name="set_option_addata">Add data to db</string>
    <string name="set_option_delall">Empty dB</string>
    <string name="settings_save">Settings Saved!</string>
    
    <string name="event_delete">Delete Person</string>
    <string name="event_rescan">Re-Scan Person</string>
    <string name="event_edit">Edit</string>
    <string name="event_cancel">Cancel Event</string>
    <string name="send_email">Please wait a few seconds...</string>
    <string name="no_data">No data</string>
    
    <string name="option_load">Load Persons</string>
    <string name="option_list_s">Add single Person</string>
    <string name="option_list_m">Add Multiple Persons</string>
    
    <string name="invalid_data">Invalid data format</string>
    
    <string name="student">Student Details</string>
    <string name="official">Official Details</string>
    <string name="fname">First Name</string>
    <string name="lname">Last Name</string>
    <string name="uname">Username</string>
    <string name="pass">Password</string>
    <string name="Code">Code</string>
    <string name="login_message">Please Enter Valid Username \n (Should be 3 letters or more)</string>
    <string name="scanfail">Intent was canceled or Data acquisition failed</string>
    <string name="unnecessary_func">Function not developed - Redundant</string>
    <string name="load_fail">Failed to load Events - </string>
    <string name="ses_detail">Add session details</string>
    <string name="import_xml">import person to event dB</string>
    <string name="modify_listview">Error modifying list view(Remove) - </string>
</resources>
