<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	 android:id="@+id/olayout_root"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    >
    <TextView android:layout_width="fill_parent" android:id="@+id/textView1" android:layout_height="wrap_content" android:textSize="@dimen/menu_item_med" android:gravity="center_vertical|center_horizontal" android:text="@string/official"></TextView>
    <ScrollView android:layout_width="fill_parent" android:id="@+id/scrollView1" android:scrollbars="vertical" android:layout_height="fill_parent">
        <TableLayout android:layout_marginTop="@dimen/vspace" android:layout_width="fill_parent" android:id="@+id/tableLayout1" android:layout_height="fill_parent">
            <TableRow android:layout_width="wrap_content" android:gravity="center_vertical|center_horizontal" android:id="@+id/TableRow01" android:layout_height="wrap_content">
                <TextView android:layout_height="wrap_content" android:layout_width="wrap_content" android:id="@+id/TextView01" android:text="@string/fname"></TextView>
                <EditText android:layout_height="wrap_content" android:layout_width="wrap_content" android:id="@+id/EditText01"></EditText>
            </TableRow>
            <TableRow android:layout_width="wrap_content" android:gravity="center_vertical|center_horizontal" android:id="@+id/TableRow02" android:layout_height="wrap_content">
                <TextView android:layout_height="wrap_content" android:layout_width="wrap_content" android:id="@+id/TextView02" android:text="@string/lname"></TextView>
                <EditText android:layout_height="wrap_content" android:layout_width="wrap_content" android:id="@+id/EditText02"></EditText>
            </TableRow>
            <TableRow android:layout_width="wrap_content" android:gravity="center_vertical|center_horizontal" android:id="@+id/TableRow03" android:layout_height="wrap_content">
                <TextView android:layout_height="wrap_content" android:layout_width="wrap_content" android:id="@+id/TextView03" android:text="@string/Code"></TextView>
                <EditText android:layout_height="wrap_content" android:layout_width="wrap_content" android:id="@+id/EditText03"></EditText>
            </TableRow>
            <TableRow android:layout_width="wrap_content" android:gravity="center_vertical|center_horizontal" android:id="@+id/TableRow04" android:layout_height="wrap_content">
                <TextView android:layout_height="wrap_content" android:layout_width="wrap_content" android:id="@+id/TextView04" android:text="@string/uname"></TextView>
                <EditText android:layout_height="wrap_content" android:layout_width="wrap_content" android:id="@+id/EditText04"></EditText>
            </TableRow>
            <TableRow android:layout_width="wrap_content" android:layout_height="wrap_content" android:id="@+id/TableRow05" android:gravity="center_vertical|center_horizontal">
                <TextView android:layout_height="wrap_content" android:layout_width="wrap_content" android:id="@+id/TextView05" android:text="@string/pass"></TextView>
                <EditText android:layout_height="wrap_content" android:id="@+id/EditText05" android:layout_width="wrap_content"></EditText>
            </TableRow>
        </TableLayout>
    </ScrollView>
</LinearLayout>
