<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
   
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@android:color/white">
<TextView  
    android:layout_width="fill_parent" 
    android:layout_height="wrap_content" 
    android:text="@string/event"
    android:gravity="center_vertical|center_horizontal"/>
<TableLayout android:layout_width="wrap_content" android:id="@+id/tableLayout1" android:layout_height="wrap_content" android:stretchColumns="*" android:layout_gravity="center_vertical|center_horizontal" android:gravity="center_vertical|center_horizontal">
    <TableRow android:layout_width="wrap_content" android:id="@+id/tableRow1" android:layout_height="wrap_content" android:layout_gravity="center_vertical|center_horizontal" android:gravity="center_vertical|center_horizontal">
        <TextView android:id="@+id/textView1" android:layout_width="wrap_content" android:layout_height="wrap_content" android:gravity="center_vertical|center_horizontal" android:text="   "></TextView>
        <TextView android:id="@+id/textView2" android:layout_width="wrap_content" android:layout_height="wrap_content" android:gravity="center_vertical|center_horizontal" android:text="   "></TextView>
    </TableRow>
    <TableRow android:layout_width="wrap_content" android:id="@+id/tableRow2" android:layout_height="wrap_content">
        <TextView android:layout_height="wrap_content" android:layout_width="wrap_content" android:id="@+id/TextView02" android:gravity="center_vertical|center_horizontal" android:text="  "></TextView>
        <TextView android:layout_height="wrap_content" android:layout_width="wrap_content" android:id="@+id/TextView01" android:gravity="center_vertical|center_horizontal" android:text=" "></TextView>
    </TableRow>
</TableLayout>
<TextView android:id="@+id/textView3" android:layout_height="wrap_content" android:gravity="center_vertical|center_horizontal" android:layout_width="fill_parent" android:text="@string/event_offlabel"></TextView>
<ListView android:layout_width="fill_parent" android:id="@+id/officials_view" android:layout_height="@dimen/view_height"></ListView>
<TextView android:id="@+id/TextView03" android:layout_width="fill_parent" android:gravity="center_vertical|center_horizontal" android:layout_height="wrap_content" android:text="@string/event_stdlabel"></TextView>
<ListView android:layout_width="fill_parent" android:layout_height="wrap_content" android:id="@+id/students_view"></ListView>
</LinearLayout>
